testdata/baselines/reference/submodule/conformance/privateNameUnused.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNameUnused.ts(3,5): error TS6133: '#unused' is declared but its value is never read.
privateNameUnused.ts(5,9): error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
privateNameUnused.ts(11,5): error TS6133: '#unused' is declared but its value is never read.
privateNameUnused.ts(13,9): error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
privateNameUnused.ts(21,9): error TS6133: '#unused' is declared but its value is never read.
privateNameUnused.ts(24,9): error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNameUnused.ts (6 errors) ====
    export class A {
        #used = "used";
        #unused = "unused";
        ~~~~~~~
!!! error TS6133: '#unused' is declared but its value is never read.
        constructor () {
            console.log(this.#used);
            ~~~~~~~
!!! error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
        }
    }
    
    export class A2 {
        #used() {  };
        #unused() { };
        ~~~~~~~
!!! error TS6133: '#unused' is declared but its value is never read.
        constructor () {
            console.log(this.#used());
            ~~~~~~~
!!! error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
        }
    }
    
    export class A3 {
        get #used() { return 0 };
        set #used(value: number) {  };
        
        get #unused() { return 0 };
            ~~~~~~~
!!! error TS6133: '#unused' is declared but its value is never read.
        set #unused(value: number) {  };
        constructor () {
            console.log(this.#used);
            ~~~~~~~
!!! error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
        }
    }